# MeshNest

./: .gitignore  MeshNest_Claude_Code_Local_Organizer_Task.md  MeshNest_TZ_Web_Service.md  README.md  organize-meshnest.ps1
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  db.py  db_sync.py  deps.py  main.py
backend/app/api/v1/: __init__.py  auth.py  categories.py  files.py  import_jobs.py  import_package.py  me.py  models.py  search.py  tags.py  uploads.py
backend/app/api/v1/admin/: __init__.py  invites.py  users.py
backend/app/auth/: __init__.py  invites.py  jwt.py  passwords.py
backend/app/core/: ratelimit.py
backend/app/models/: __init__.py  _types.py  category.py  file.py  import_job.py  invite.py  model.py  refresh_token.py  tag.py  user.py
backend/app/schemas/: auth.py  models.py  uploads.py
backend/app/scripts/: create_admin.py  import_from_zip.py
backend/app/services/: __init__.py  email.py  import_package.py  search.py  storage.py  upload_buffer.py
backend/app/tasks/: celery_app.py  conversion_tasks.py  import_tasks.py  maintenance_tasks.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_models_list.py
deploy/: .env.example  docker-compose.dev.yml  docker-compose.lan.yml  docker-compose.yml
deploy/scripts/: backup-db.sh  local-import.sh  restore-db.sh
docs/: api.md  architecture.md  deployment.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: FilterPanel.tsx  LangSwitcher.tsx  Layout.tsx  ModelCard.tsx  ModelViewer.tsx  ProtectedRoute.tsx
frontend/src/i18n/: en.json  uk.json
frontend/src/lib/: api.ts  auth.ts  i18n.ts  utils.ts
frontend/src/routes/: import-jobs.tsx  invite.tsx  library.tsx  login.tsx  model.tsx  (+1 more)
(+2 files in other folders)
