[project]
name = "meshnest-api"
version = "0.1.0"
description = "MeshNest backend — FastAPI + Celery for 3D model library"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "pydantic[email]>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.12",
    # DB
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2",
    "psycopg2-binary>=2.9,<3",  # для alembic CLI sync-режима
    # Auth / security
    "bcrypt>=4.2,<5",
    "pyjwt[crypto]>=2.10,<3",
    "slowapi>=0.1.9,<1",
    # Object storage
    "boto3>=1.35,<2",  # MinIO speaks S3 API
    "aioboto3>=13.2,<14",
    # Background tasks
    "celery[redis]>=5.4,<6",
    "redis>=5.2,<6",
    # 3D processing
    "trimesh>=4.5,<5",
    "networkx>=3.3,<4",       # trimesh нужен networkx для 3MF/scene graph
    "numpy>=1.26,<3",
    "pygltflib>=1.16,<2",
    "Pillow>=11,<12",
    # Search
    "meilisearch>=0.31,<0.34",
    # Email
    "aiosmtplib>=3.0,<4",
    "jinja2>=3.1,<4",
    # Logging
    "structlog>=24.4,<25",
    # Utilities
    "httpx>=0.28,<0.29",
    "python-slugify>=8.0,<9",
    "pyyaml>=6.0,<7",
    "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7",
    "httpx>=0.28,<0.29",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-pyyaml",
    "factory-boy>=3.3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line-length handled separately

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
